--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -1,46 +1,39 @@
-name: "Terraform Apply"
+name: Terraform Apply
 
 on:
   push:
     branches:
       - main
-
-env:
-  TF_CLOUD_ORGANIZATION: "${{ secrets.TF_CLOUD_ORGANIZATION }}"
-  TF_WORKSPACE: "${{ secrets.TF_WORKSPACE }}"
-  TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  CONFIG_DIRECTORY: "./terraform"
+  workflow_dispatch:
 
 jobs:
   terraform:
-    name: "Terraform Apply"
     runs-on: ubuntu-latest
-    permissions: # granular permissions
-      # so GitHub can check out this repo using the default github.token
-      contents: read
+    env:
+      CONFIG_DIRECTORY: ./terraform
+      STATE_BUCKET: tf-state-8864
+      AWS_REGION: us-east-1
+      ENVIRONMENT: development
+      PROJECT_NAME: ${{ github.event.repository.name }}
+    # environment: ${{ env.ENVIRONMENT }}
+    permissions:
+      contents: write
+      id-token: write
+    defaults:
+      run:
+        working-directory: ${{ env.CONFIG_DIRECTORY }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Upload Configuration
-        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
-        id: apply-upload
-        with:
-          workspace: ${{ env.TF_WORKSPACE }}
-          directory: ${{ env.CONFIG_DIRECTORY }}
-
-      - name: Create Apply Run
-        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
-        id: apply-run
-        with:
-          workspace: ${{ env.TF_WORKSPACE }}
-          configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
-
-      - name: Apply
-        uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
-        if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
-        id: apply
-        with:
-          run: ${{ steps.apply-run.outputs.run_id }}
-          comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
+    - name: Terraform Apply
+      id: terraform-apply
+      uses: mleager/tf-shared-actions/.github/actions/terraform-apply@main
+      with:
+        oidc_role: ${{ secrets.OIDC_ROLE }}
+        aws_account_id: ${{ secrets.AWS_ACCOUNT_ID }}
+        project_name: ${{ env.PROJECT_NAME }}
+        environment: ${{ env.ENVIRONMENT }}
+        bucket: ${{ env.STATE_BUCKET }}
+        key: ${{ env.PROJECT_NAME }}/terraform.tfstate
+        region: ${{ env.AWS_REGION }}
+        var_file: terraform.tfvars.${{ env.ENVIRONMENT }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
