--- a/.github/workflows/terraform-destroy.yaml
+++ b/.github/workflows/terraform-destroy.yaml
@@ -1,33 +1,40 @@
-name: "Terraform Destroy"
+name: Terraform Destroy
 
 on:
-  workflow_dispatch:  # This allows manual triggering from the GitHub Actions tab
+  workflow_dispatch:
+    inputs:
+      confirm_destroy:
+        description: 'Type "DESTROY" to confirm resource destruction'
+        required: true
 
 jobs:
-  terraform_destroy:
-    name: 'Terraform Destroy'
+  terraform:
     runs-on: ubuntu-latest
-
+    env:
+      CONFIG_DIRECTORY: ./terraform
+      STATE_BUCKET: tf-state-8864
+      AWS_REGION: us-east-1
+      ENVIRONMENT: development
+      PROJECT_NAME: ${{ github.event.repository.name }}
+    # environment: ${{ env.ENVIRONMENT }}
+    permissions:
+      contents: write
+      id-token: write
     defaults:
       run:
-        working-directory: ./terraform
-        shell: bash
-
-    env:
-      TF_VAR_email_subscriber: "${{ vars.EMAIL_SUBSCRIBER }}"
-
+        working-directory: ${{ env.CONFIG_DIRECTORY }}
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-
-    - name: Terraform Init
-      run: terraform init
-
     - name: Terraform Destroy
-      run: terraform destroy -auto-approve
+      uses: mleager/tf-shared-actions/.github/actions/terraform-destroy@main
+      with:
+        oidc_role: ${{ secrets.OIDC_ROLE }}
+        aws_account_id: ${{ secrets.AWS_ACCOUNT_ID }}
+        project_name: ${{ env.PROJECT_NAME }}
+        environment: ${{ env.ENVIRONMENT }}
+        bucket: ${{ env.STATE_BUCKET }}
+        key: ${{ env.PROJECT_NAME }}/terraform.tfstate
+        region: ${{ env.AWS_REGION }}
+        var_file: terraform.tfvars.${{ env.ENVIRONMENT }}
+        confirm_destroy: ${{ github.event.inputs.confirm_destroy }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
 
